Styling improvements, logo and much more related to branding.

--- a/src/components/currencyInput/styles.less
+++ b/src/components/currencyInput/styles.less
@@ -1,6 +1,10 @@
 .ccy-input {
   margin-top: 10px;
   margin-bottom: 10px;
+  background-color: #F6F6F6;
+  border-color: #6B2679;
+  border-width: 2px;
+  border-radius: 20px;
   
   .ant-select-selector,
   .ant-select-selector:focus,
@@ -9,6 +13,7 @@
     box-shadow: none !important;
   };
   .ant-select-selection-item {
+    color: #EB526E!important;
     display: flex;
     
     .token-balance {
@@ -22,6 +27,7 @@
 }
 
 .ccy-input-header {
+  color: #EB526E!important;
   display: grid;
 
   grid-template-columns: repeat(2, 1fr);
@@ -37,6 +43,7 @@
 
 .ccy-input-header-left {
   width: 100%;
+  color: #EB526E!important;
   box-sizing: border-box;
   margin: 0px;
   min-width: 0px;
@@ -49,6 +56,7 @@
 
 .ccy-input-header-right {
   width: 100%;
+  color: #EB526E!important;
   display: flex;
   flex-direction: row;
   -webkit-box-align: center;
