--- a/src/components/pool/view.less
+++ b/src/components/pool/view.less
@@ -10,6 +10,7 @@
   width: 400px;
   position: relative;
   margin: 5px;
+  color: #EB526E!important;
 
   .left-icon {
     position: absolute;
@@ -34,6 +35,7 @@
   }
 
   .pool-card-row {
+    color: #EB526E!important;
     box-sizing: border-box;
     margin: 5px 0px;
     min-width: 0px;
@@ -47,6 +49,7 @@
     justify-content: space-between;
 
     .pool-card-cell {
+      color: #EB526E!important;
       display: flex;
       flex-direction: column;
       align-items: flex-end;
@@ -59,12 +62,14 @@
     }
 
     .left {
+      color: #EB526E!important;
       display: flex;
       flex-direction: column;
       align-items: flex-end;
     }
 
     .small {
+      color: #EB526E!important;
       font-size: 11px;
     }
   }
