--- a/src/components/pool/add.less
+++ b/src/components/pool/add.less
@@ -14,6 +14,8 @@
   width: 100%;
   margin-top: 5px;
   position: relative;
+  color: white;
+  background-color: #6B2679;
 
   :first-child {
     width: 100%;
