Adding a cool header.

--- a/src/App.less
+++ b/src/App.less
@@ -1,4 +1,5 @@
 @import "~antd/dist/antd.dark.less";
+@import "~antd/dist/antd.less";
 @import "./ant-custom.less";
 
 body {
@@ -297,5 +298,14 @@ h3 {
   .ant-select-item-option-selected {
     color: white!important;
     background-color: #EB526E!important;
+  }
+}
+
+.header {
+  height: 200px;
+  img {
+    max-height: 400px;
+    max-width: 500px;
+    object-fit: cover;
   }
 }
