--- a/src/ant-custom.less
+++ b/src/ant-custom.less
@@ -1,4 +1,17 @@
 @import "~antd/dist/antd.css";
 @import "~antd/dist/antd.dark.less";
 @primary-color: #ff00a8;
-@popover-background: white;
+@border-color-base: #945BA2; 
+@link-color: #945BA2; 
+@text-color: #945BA2; // major text color
+@text-color-secondary: #945BA2; // secondary text color
+@text-color-inverse: #ff00a8; 
+@popover-background: rgb(238, 235, 235);
+
+@btn-primary-color: white;
+
+@btn-default-color: #ff00a8;
+@btn-default-border: @border-color-base;
+
+@btn-disable-color: white;
+@btn-disable-bg: #945BA2;
