Improving charts layout and color scheme.

--- a/src/ant-custom.less
+++ b/src/ant-custom.less
@@ -8,6 +8,17 @@
 @text-color-inverse: #ff00a8; 
 @popover-background: rgb(238, 235, 235);
 
+@body-background: white;
+@text-color: #945BA2; // major text color
+@text-color-secondary: #945BA2; // secondary text color
+@text-color-inverse: #ff00a8; 
+@icon-color: inherit;
+@icon-color-hover: fade(@black, 75%);
+@heading-color: #945BA2;
+@text-color-dark: fade(@white, 85%);
+@text-color-secondary-dark: fade(@white, 65%);
+@text-selection-bg: @primary-color;
+@component-background: white;
 @btn-primary-color: white;
 
 @btn-default-color: #ff00a8;
@@ -15,3 +26,23 @@
 
 @btn-disable-color: white;
 @btn-disable-bg: #945BA2;
+
+@layout-body-background: white;
+@layout-header-background: #945BA2;
+
+@table-header-bg: #945BA2;
+@table-header-color: #945BA2;
+@table-header-sort-bg: #945BA2;
+@table-body-sort-bg: rgba(0, 0, 0, 0.01);
+@table-row-hover-bg: rgba(0, 0, 0, 0.06);
+@table-selected-row-color: white;
+@table-selected-row-bg: #945BA2;
+@table-body-selected-sort-bg: #945BA2;
+@table-selected-row-hover-bg: white;
+@table-expanded-row-bg: #fbfbfb;
+@table-padding-vertical: 16px;
+@table-padding-horizontal: 16px;
+@table-border-radius-base: 1px;
+@table-footer-bg: @background-color-light;
+@table-footer-color: @heading-color;
+@table-header-bg-sm: transparent;
