--- a/src/components/pool/view.less
+++ b/src/components/pool/view.less
@@ -2,6 +2,7 @@
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  background-color: white!important;
 }
 
 .pool-card {
@@ -10,6 +11,7 @@
   width: 400px;
   position: relative;
   margin: 5px;
+  background-color: white!important;
   color: #EB526E!important;
 
   .left-icon {
