--- a/src/components/pool/view.less
+++ b/src/components/pool/view.less
@@ -11,7 +11,7 @@
   width: 400px;
   position: relative;
   margin: 5px;
-  background-color: white!important;
+  background-color: transparent;
   color: #EB526E!important;
 
   .left-icon {
