--- a/src/components/trade/trade.less
+++ b/src/components/trade/trade.less
@@ -27,7 +27,7 @@
 
 .input-card {
   display: flex;
-  background-color: #F6F6F6;
+  background-color: transparent;
   flex-direction: column;
   align-items: center;
   margin-bottom: 10px;
